--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="assets/css/global.css">
+    <link rel="stylesheet" href="./assets/css/global.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -15,7 +15,9 @@
     <nav class="navbar">
         <ul class="navbar-ul">
             <div>
-                <li class="navbar-li" style="float: left;"><a href="">Test</a></li>
+                <li class="navbar-li" style="float: left;">
+                    <h2 class="navbar-title">Finsweet</h1>
+                </li>
                 <li class="navbar-li"> <button>Subscribe</button> </li>
                 <li class="navbar-li"><a href="#AboutUs">About Us</a></li>
                 <li class="navbar-li"><a href="#ContactUs">Contact Us</a></li>
@@ -24,6 +26,11 @@
             </div>
         </ul>
     </nav>
+
+    <div class="main-content">
+        <img id="home-image" src="./assets/img/pexels-andrea-piacquadio-3772622.jpg" alt="home-image">
+    </div>
+
 </body>
 
 </html>
