--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&family=Sen:wght@400;500;600;700;800&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/global.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
@@ -18,7 +23,7 @@
                 <li class="navbar-li" style="float: left;">
                     <h2 class="navbar-title">Finsweet</h1>
                 </li>
-                <li class="navbar-li"> <button>Subscribe</button> </li>
+                <li class="navbar-li"> <button> <a id="navbar-button-a" href="#">Subscribe</a></button> </li>
                 <li class="navbar-li"><a href="#AboutUs">About Us</a></li>
                 <li class="navbar-li"><a href="#ContactUs">Contact Us</a></li>
                 <li class="navbar-li"><a href="#blog">Blog</a></li>
@@ -28,7 +33,15 @@
     </nav>
 
     <div class="main-content">
-        <img id="home-image" src="./assets/img/pexels-andrea-piacquadio-3772622.jpg" alt="home-image">
+        <img class="image-main-content" src="assets/img/pexels-andrea-piacquadio-3772622.jpg" alt="Image1">
+        <div class="text-main-content">
+            <h2>Posted on <b>STARTUP</b></h2>
+            <h1>Step-by-step guide to choosing great font pairs</h1>
+            <p>By <span style="color: #FFD050;">James West</span> | May 23, 2022 </p>
+            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                Excepteur sint occaecat cupidatat non proident.</p>
+            <button>Read More ></button>
+        </div>
     </div>
 
 </body>
