Feito a página de blog com os posts.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
         href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&family=Sen:wght@400;500;600;700;800&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/global.css">
-    <link rel="stylesheet" href="./assets/css/footer.css ">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -27,7 +26,7 @@
                 <li class="navbar-li"> <button> <a id="navbar-button-a" href="#">Subscribe</a></button> </li>
                 <li class="navbar-li"><a href="#AboutUs">About Us</a></li>
                 <li class="navbar-li"><a href="#ContactUs">Contact Us</a></li>
-                <li class="navbar-li"><a href="#blog">Blog</a></li>
+                <li class="navbar-li"><a href="/blog.html">Blog</a></li>
                 <li class="navbar-li"><a href="#home">Home</a></li>
             </div>
         </ul>
@@ -69,7 +68,7 @@
                 </li>
                 <li style="float: right;">
                     <div>
-                        <a href="./posts.html"><span style="color: #592EA9; float: right;">View all</span></a>
+                        <a href="/blog.html"><span style="color: #592EA9; float: right;">View all</span></a>
                     </div>
                 </li>
             </ul>
@@ -116,6 +115,10 @@
                         <input type="text" placeholder="Enter your Email">
                         <button>Submit</button>
                     </div>
+                </div>
+                <div class="footer-addres">
+                    <p>Finstreet 118 2561 Fintown</p>
+                    <p>Hello@finsweet.com 020 7993 2905</p>
                 </div>
             </div>
     </footer>
