alterado os links da tag <a>

--- a/blog.html
+++ b/blog.html
@@ -27,8 +27,8 @@
                 <li class="navbar-li"> <button> <a id="navbar-button-a" href="#">Subscribe</a></button> </li>
                 <li class="navbar-li"><a href="#AboutUs">About Us</a></li>
                 <li class="navbar-li"><a href="#ContactUs">Contact Us</a></li>
-                <li class="navbar-li"><a href="/blog.html">Blog</a></li>
-                <li class="navbar-li"><a href="#home">Home</a></li>
+                <li class="navbar-li"><a href="blog.html">Blog</a></li>
+                <li class="navbar-li"><a href="index.html">Home</a></li>
             </div>
         </ul>
     </nav>
@@ -164,8 +164,8 @@
                     </li>
                     <li class="footer-li"><a href="#AboutUs">About Us</a></li>
                     <li class="footer-li"><a href="#ContactUs">Contact Us</a></li>
-                    <li class="footer-li"><a href="#blog">Blog</a></li>
-                    <li class="footer-li"><a href="#home">Home</a></li>
+                    <li class="footer-li"><a href="blog.html">Blog</a></li>
+                    <li class="footer-li"><a href="index.html">Home</a></li>
                 </div>
             </ul>
             <div class="footer-content">
